--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,11 @@
     <string name="app_name">CriminalIntent</string>
     <string name="crime_title_hint">Enter the title for the crime!</string>
 
+    <string name="crime_title_lable">Title</string>
+    <string name="crime_deatils_lable">Details</string>
+    <string name="crime_solved_lable">Solved</string>
+
+
+
 
 </resources>
