点击详情页面的按钮弹出对话框

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="crime_title_lable">Title</string>
     <string name="crime_deatils_lable">Details</string>
     <string name="crime_solved_lable">Solved</string>
+    <string name="date_picker_title">Date of Crime:</string>
 
 
 
