创建工具栏菜单。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,13 @@
     <string name="date_picker_title">Date of Crime:</string>
 
 
+    <!-- 工具栏-->
+    <string name="new_crime">New Crime</string>
+    <string name="show_subtitle">Show Subtitle</string>
+    <string name="hide_subtitle">Hide Subtitle</string>
+    <string name="subtitle_format">%1$s crimes</string>
+
+
 
 
 </resources>
