添加按钮组件&添加嫌疑人信息至模型层。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,12 @@
     <string name="subtitle_format">%1$s crimes</string>
 
 
+    <string name="crime_suspect_text">CHOOSE SUSPECT</string>
+    <string name="crime_report_text">SEND CRIME REPORT</string>
+
+
+
+
 
 
 </resources>
